# gacode-docker

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  bach_run_simulation_jobs.sh  build_merged_omfit.sh  environment.yml  format_tglf.py  input.cgyro  launch.py  make.inc.LINUX_DOCKER  pyproject.toml  requirements.txt  rerun_simulation_jobs.sh  run_active_learning.sh  run_simulation.sh  run_simulation_job.sh  setup_bal_gacode.sh
config/: batch_simulation.sh  configure_launch.sh  kube.yaml  launch.yaml  launch_template.yaml  launch_template.yml
input_generation/: environment.yml  generate_ky_spectra.py  h5_to_cgyro_input.py  h5_to_tglf_input.py  merged_dist.json  modify_key.py  pyproject.toml  sample_data.py  sample_h5.py  sampled_output_file.h5  samples_10k_minmax_normal.npy  setup.sh  spot_check_npy.py  test_ky_spectra.py
job_scripts/: run_simulation_pod.sh
output_parsing/: batch_tglf_processor.py  environment.yml  get_run_exit_status.py  parse_and_save_outputs.py  parse_outputs.py  pyproject.toml  qlgyro_and_tglf_flux_calculation.py  run_tglf_flux.py  setup.sh
simulation_config/: configure_launch.sh  kube.yml  launch.yml  launch_template.yml
src/: run_container_simulation.sh  run_simulation.sh  setup_env.sh
src/platform/: exec.LINUX_DOCKER
src/toolbox/: kubeutils.py  launch.py  s3utils.py
test/input-004/: input.tglf
