[tool.poetry]
name = "output-parsing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
omfit-classes = { path = "./OMFIT-source/omfit", develop = true }
numpy = "^2.3.1"
uncertainties = "^3.2.3"
pexpect = "^4.9.0"
scipy = "^1.16.0"
omas = "^0.94.2"
xarray = "^2025.7.0"
matplotlib = "^3.10.3"
pygacode = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
